2004-05-06  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-dock-item.c (bonobo_dock_item_realize): Don't
	initialize attributes unnecessarily.
	(bonobo_dock_item_realize): Set the correct screen for the
	floating window.
	(bonobo_dock_item_realize): Connect to the floating window's
	signals here.
	(bonobo_dock_item_detach): Don't connect to the floating window's
	signals here.
	(bonobo_dock_item_add): Check that we don't have a child already.
	(bonobo_dock_item_float_window_expose): Fix prototype.
	(bonobo_dock_item_expose): Likewise.
	(button_changed): Likewise.
	(bonobo_dock_item_float_window_button_changed): Likewise.
	(bonobo_dock_item_button_changed): Likewise.
	(widget_motion): Likewise.
	(bonobo_dock_item_float_window_motion): Likewise.
	(bonobo_dock_item_motion): Likewise.
	(bonobo_dock_item_delete_event): Likewise.

2004-04-05  Arvind Samptur  <arvind.samptur@wipro.com>

	* bonobo/bonobo-dock.c: (drag_floating): Check if
	the toolbar is already floating.
	
2004-04-05  Arvind Samptur  <arvind.samptur@wipro.com>

	* bonobo/bonobo-dock-item.c: (button_changed):
	doh!  Emitting signal on the wrong widget

2004-04-05  Arvind Samptur  <arvind.samptur@wipro.com>

	* bonobo/bonobo-dock-item.c: (bonobo_dock_item_unfloat):
	Get the grip's parent right when doing an unfloat. Fixes
	the problem of grip not being exposed when docked through
	the pointer

2004-04-01  Arvind Samptur  <arvind.samptur@wipro.com>

	* bonobo/bonobo-dock-item-grip.c: (bonobo_dock_item_grip_dock):
	When docking a floating toolbar retain its orientation

2004-03-18  Arvind Samptur  <arvind.samptur@wipro.com>

	Patch from Arvind and Michael Meeks <michael@ximian.com>

	Moving the float_window from a GdkWindow to a GtkWindow.

	* bonobo/bonobo-dock-item.h: mark the structs private.

	* bonobo/bonobo-dock-item.c: Add BonoboDockItem child
	and the float window to the BonoboDockItemPriv struct.
	(bonobo_dock_item_instance_init): use the GtkWindow calls
	for the float_window;